subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/invalid/DefiniteAssign_Invalid_12.while
int f(int x) {
    {int f} rs;
    rs.f = 1;
    return rs.f;
}
